--- a/api/composer.json
+++ b/api/composer.json
@@ -26,6 +26,7 @@
         "ext-json": "*",
         "monolog/monolog": "^2.8",
         "php-di/php-di": "^6.4",
+        "phpentair/libpentair": "^0.9.0",
         "slim/psr7": "^1.5",
         "slim/slim": "^4.10"
     },
@@ -46,7 +47,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Phpentair\\": "../lib/"
         }
     },
     "autoload-dev": {
