--- a/nginx.api.config
+++ b/nginx.api.config
@@ -5,9 +5,15 @@ server {
     root /var/www/pentair/api;
     index index.php index.html;
 
-    add_header Access-Control-Allow-Origin *;
-
     location ~ /api {
+
+        # requires http://wiki.nginx.org/HttpHeadersMoreModule to handle response codes that add_header ignores
+        more_set_headers "Access-Control-Allow-Origin: $http_origin";
+        more_set_headers "Access-Control-Allow-Credentials: true";
+        more_set_headers "Access-Control-Allow-Methods: GET, POST, DELETE, PUT, OPTIONS";
+        more_set_headers "Access-Control-Allow-Headers: Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type,Author>
+        more_set_headers "Access-Control-Max-Age: 1728000";
+
         alias /var/www/pentair/api/public;
         try_files $uri /index.php =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
