--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     ports:
       - 16080:80
     volumes:
-      - ./signal:/var/www/pentair/app
+      - ./app:/var/www/pentair/app
       - ./data:/var/www/pentair/data
       - ./lib:/var/www/pentair/lib
     networks:
