Several updates for features and bugfixes

--- a/nginx.api.config
+++ b/nginx.api.config
@@ -11,7 +11,7 @@ server {
         more_set_headers "Access-Control-Allow-Origin: $http_origin";
         more_set_headers "Access-Control-Allow-Credentials: true";
         more_set_headers "Access-Control-Allow-Methods: GET, POST, DELETE, PUT, OPTIONS";
-        more_set_headers "Access-Control-Allow-Headers: Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type,Author>
+        more_set_headers "Access-Control-Allow-Headers: Keep-Alive,User-Agent,If-Modified-Since,Cache-Control,Content-Type,Author>"
         more_set_headers "Access-Control-Max-Age: 1728000";
 
         alias /var/www/pentair/api/public;
