--- a/nginx.app.config
+++ b/nginx.app.config
@@ -2,18 +2,13 @@ server {
     listen 80;
     server_name _;
 
-    root /var/www/pentair/app;
-    index index.php index.html;
+    root /var/www/pentair;
+    index index.html;
 
     add_header Access-Control-Allow-Origin *;
 
     location ~ /app {
         alias /var/www/pentair/app;
-        try_files $uri /index.php =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php/php8.1-fpm.sock;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+        try_files $uri $uri/ /index.html =404;
     }
 }
