--- a/Dockerfile.signal
+++ b/Dockerfile.signal
@@ -4,7 +4,7 @@ RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get -y install tzdata
 RUN apt-get update && apt-get install -y less gzip wget nginx zip unzip git nano cron sqlite3
 RUN apt-get update && apt-get install --no-install-recommends -y php8.1 php-sqlite3
-RUN apt-get install -y php8.1-fpm php8.1-cli php8.1-common php8.1-mbstring php8.1-curl php8.1-xml
+RUN apt-get install -y php8.1-fpm php8.1-cli php8.1-common php8.1-mbstring php8.1-curl php8.1-xml php8.1-mysql
 
 RUN mkdir -p /var/www/pentair/signal
 RUN chown -R www-data:www-data /var/www/pentair
@@ -12,11 +12,6 @@ RUN chown -R www-data:www-data /var/www/pentair
 COPY nginx.signal.config /etc/nginx/sites-available/pentair
 RUN rm /etc/nginx/sites-enabled/*
 RUN ln -s /etc/nginx/sites-available/pentair /etc/nginx/sites-enabled/pentair
-
-COPY cron.vacuum-sqlite3 /etc/cron.d/vacuum-sqlite3
-RUN chmod 0644 /etc/cron.d/vacuum-sqlite3
-RUN /usr/bin/crontab /etc/cron.d/vacuum-sqlite3
-RUN touch /var/log/cron.log
 
 WORKDIR /var/www/pentair
 
