--- a/api/composer.json
+++ b/api/composer.json
@@ -28,7 +28,8 @@
         "php-di/php-di": "^6.4",
         "phpentair/libpentair": "^0.9.0",
         "slim/psr7": "^1.5",
-        "slim/slim": "^4.10"
+        "slim/slim": "^4.10",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^1.0.0",
@@ -47,8 +48,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "Phpentair\\": "../lib/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
